[docs] Bug 437593: Mention MAVEN_OPTS in CONTRIBUTING.md
Change-Id: I638ecedc283c34a085d362e502c50e465142a04a
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>